--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.header {
+  display: flex;
+  height: 50px;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px black solid;
+  margin-top: 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header h1 {
+  background-color: rgb(255, 123, 0);
+  color: white;
+  height: 100%;
+  padding: 5px 20px;
+  text-shadow: 1px 1px grey;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header img {
+  margin-right: 50px;
+  width: 45px; 
+  height: 45px;
+}
+
+.header img:hover {
+  cursor: pointer;
+}
+
+nav {
+  height: 100%; /* 100% Full-height */
+  width: 150px; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  margin-top: 50px;
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 10px; /* Place content 60px from the top */
+  transition: 0.5s; /*0.5 second transition effect to slide in the sidenav*/
+}
+
+nav a {
+  padding: 8px 8px 8px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: grey;
+  display: block;
+  transition: 0.3s;
+}
+
+nav a:hover {
+  color: white;
+}
+
+.component {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+
+.dropdown-content {
+    position: absolute;
+    display: none;
+}
+
+.dropdown-content input {
+  margin-top: 5px;
+  background-color: orangered;
   color: white;
+  height: 30px;
+  width: 100%;
+  border: 0px;
+  box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.1);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type=submit]:hover {
+  cursor: pointer;
+  background-color: rgb(252, 98, 42);
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
 }
